2009-11-26  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Source/NSPropertyList.m (XString): Write out proper XML encoding
	for control characters. Fixes a bug where menu positions in GUI
	programs would appear not persistent.

2009-11-24 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSFFIInvocation.m: make better guess when forward2 is not
	available in runtime.

2009-11-23 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSObject.m: Remove spurious semicolons
	* Source/NSConnection.m: autogsdoc ignore confusing section
	* Source/NSLock.m: autogsdoc ignore (just use header)
	* Tools/AGSParser.m: add feature to ignore sections
	* Tools/autogsdoc.m: document new ignore markup

2009-11-04 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSAutoreleasePool.m: ([-drain]) Copy undocumented OSX behavior
	calling -release (suggested by Christopher James Elphinstone Chandler).

2009-10-26  Adam Fedor  <fedor@gnu.org>

	* Source/Makefile.postamble: Add flag filter for
	libgnustep-base-entry.m (for GCC 4.4 on MinGW).

2009-10-20  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Source/NSObject.m (NSIncrementExtraRefCount): Properly release
	allocation lock.

2009-10-12 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSProcessInfo.m:
	* Headers/Foundation/NSProcessInfo.h:
	* Tools/gspath.m:
	* Tools/plmerge.m:
	* Tools/xmlparse.m:
	* Tools/sfparse.m:
	* Tools/plparse.m:
	* Tools/pldes.m:
	* Tools/defaults.m:
	* Tools/plget.m:
	* Tools/pl2link.m:
	* Tools/gdnc.m:
	* Tools/plser.m:
	* Tools/autogsdoc.m:
	* Tools/HTMLLinker.m:
	* Tools/cvtenc.m:
	Add function for easy process initialisation when the automatic
	mechanisms don't work (eg calling ObjC code from within a C or C++
	application).

2009-10-11 Eric Wasylishen <ewasylishen@gmail.com>

	* Source/NSKeyValueObserving.m: add setters for common structures.

2009-10-10 Richard Frith-Macdonald <rfm@gnu.org>

	* Headers/Foundation/NSString.h:
	* Source/NSString.m:
	* Source/GSString.m:
	Remove obsolete immutable proxy method.